# GKlib

./: .gitignore  CMakeLists.txt  CMakePresets.json  GKlibSystem.cmake  io.c
.github/actions/: install-oneAPI.bat
.github/actions/oneApi/: action.yml
.github/workflows/: ci.yml
test/: CMakeLists.txt
